[gd_scene load_steps=2 format=3 uid="uid://bmeaswwdwxeuq"]

[ext_resource type="Script" path="res://2d/movement/input_visualization.gd" id="1_a6kwe"]

[node name="Input Visualization" type="MarginContainer"]
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20
script = ExtResource("1_a6kwe")

[node name="GridContainer" type="GridContainer" parent="."]
layout_mode = 2
columns = 3

[node name="TurnLeftContainerEmpty" type="Control" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TurnLeftContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/TurnLeftContainer"]
layout_mode = 2
text = "Turn
Left"
horizontal_alignment = 1

[node name="ForwardContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/ForwardContainer"]
layout_mode = 2
text = "Forward"
horizontal_alignment = 1

[node name="TurnRightContainerEmpty" type="Control" parent="GridContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="TurnRightContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/TurnRightContainer"]
layout_mode = 2
text = "Turn
Right"
horizontal_alignment = 1

[node name="LeftContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/LeftContainer"]
layout_mode = 2
text = "Left"
horizontal_alignment = 1

[node name="BackwardContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/BackwardContainer"]
layout_mode = 2
text = "Backward"
horizontal_alignment = 1

[node name="RightContainer" type="PanelContainer" parent="GridContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(96, 96)
layout_mode = 2

[node name="Label" type="Label" parent="GridContainer/RightContainer"]
layout_mode = 2
text = "Right"
horizontal_alignment = 1
